# BirdCam

./: .gitignore  BirdCam.py  README.md  camera1.py  camera_selector.py  create_executable.bat  environment.yml  image_utils.py  pyproject.toml  radio_tester.py  setup.py  video_viewer.py
birdcam/: BirdCam.py  image_utils.py  video_testing.py  wificam.py
src/birdcam/: browser_view.py  image_testing.py  image_utils.py
